# samskriti-project

./: .gitignore  CHECKSUMS.txt  LICENSE  README.md  pyproject.toml
project_state/: __init__.py  mcp_adapter.py
slash-commands/claude-code/: sam.md
slash-commands/cursor/: sam.md
